FIX: Width warning not covering full height on some devices.

--- a/sass/main.css
+++ b/sass/main.css
@@ -1099,7 +1099,7 @@ label {
   overflow: hidden;
   max-width: 1240px;
   width: 100%;
-  max-height: 1200px;
+  max-height: 1440px;
   height: 100%;
   z-index: 999;
   border: none;
