--- a/src/components/widthWarningComponent/_widthWarning.scss
+++ b/src/components/widthWarningComponent/_widthWarning.scss
@@ -6,7 +6,7 @@
   overflow: hidden;
   max-width: 1240px;
   width: 100%;
-  max-height: 1200px;
+  max-height: 1440px;
   height: 100%;
   z-index: 999;
   border: none;
